[DSD-5599]Updated pom.xml
Signed-off-by: Mahesh-Binayak <76687012+Mahesh-Binayak@users.noreply.github.com>

--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -137,7 +137,7 @@
 							<goal>report-aggregate</goal>
 						</goals>
 						<configuration>
-						    <outputDirectory>${project.build.directory}/site/jacoco-aggregate</outputDirectory>
+						    <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
                                                     <reportFormats>
                                                         <reportFormat>XML</reportFormat>
                                                     </reportFormats>
