[]DSD-6644Updated push-trigger.yml
Signed-off-by: Praful Rakhade <prafulrakhade02@gmail.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -130,7 +130,7 @@ jobs:
 
   build-consolidator-dockers:
     needs: build-consolidator
-    uses: mosip/kattu/.github/workflows/docker-build.yml@master
+    uses: mosip/kattu/.github/workflows/docker-build.yml@master-java21
     with:
       SERVICE_LOCATION: 'consolidator'
       SERVICE_NAME: 'consolidator-websub-service'
@@ -202,7 +202,7 @@ jobs:
 
   build-websub-dockers:
     needs: build-websub
-    uses: mosip/kattu/.github/workflows/docker-build.yml@master
+    uses: mosip/kattu/.github/workflows/docker-build.yml@master-java21
     with:
       SERVICE_LOCATION: 'hub'
       SERVICE_NAME: 'websub-service'
